--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-fileinfo": "*",
+        "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -13,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^1.1",
         "paypal/rest-api-sdk-php": "^1.6",
+        "phpoffice/phpspreadsheet": "^2.0",
         "razorpay/razorpay": "2.*"
     },
     "require-dev": {
