--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.13",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^1.1",
         "paypal/rest-api-sdk-php": "^1.6",
