--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.13",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "^3.1",
         "paypal/rest-api-sdk-php": "^1.6",
-        "phpoffice/phpspreadsheet": "^2.0",
+        "psr/simple-cache": "1.0",
         "razorpay/razorpay": "2.*"
     },
     "require-dev": {
