--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "ext-fileinfo": "*",
         "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^2.1",
+        "google/apiclient": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
+        "kreait/firebase-php": "^7.14",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.13",
